tests/parsing/smtlib/v2.6/errors/151_sorted_var_list_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/151_sorted_var_list_unclosed_1.smt2", line 2, character 29-30:
2 | (define-fun-rec foo ((x int) _))
                                 ^
Error while parsing a list of sorted variables, read the reserved word '_',
      but expected another sorted variable of the form "(var sort)", or a
      closing parenthesis.
